Fixed sizing on hover over on container status component fixed logic and centralized environmnet editing with container status feed back fixed footer showing x on info status updates fixed css issues with scroll bar minimized fixed branch menu overflow changed color of tabs in package dependencies

--- a/src/css/components/dashboard/localLabBooks.scss
+++ b/src/css/components/dashboard/localLabBooks.scss
@@ -406,9 +406,10 @@
 }
 
 .LocalLabbooks__containerStatus--state.Build.Failed,
-.LocalLabbooks__containerStatus--state.Does.Not.Exist{
+.LocalLabbooks__containerStatus--state.Rebuild.Required{
   border: 3px solid $crimson;
   cursor: pointer;
+  padding: 0px;
 }
 
 .LocalLabbooks__containerStatus--state.Building:hover,
